Add Bricklink minidolls SPA and owned checkbox feature
- Add owned checkbox to minidolls.html with localStorage persistence
- Create scrape-bricklink.ts for scraping Bricklink minidoll data
- Add bricklink.html SPA with light theme and color-coded name badges
- Add minidolls.bricklink.json with scraped data including names
- Link Bricklink page from index.html

--- a/index.html
+++ b/index.html
@@ -106,6 +106,13 @@
             <p>LEGO Friends characters</p>
           </div>
         </a>
+        <a href="bricklink.html" class="collection-card">
+          <div class="collection-thumb" style="background-color: #3f51b5"></div>
+          <div class="collection-info">
+            <h2>Bricklink Minidolls</h2>
+            <p>Friends minidolls from Bricklink</p>
+          </div>
+        </a>
       </div>
     </div>
     <footer>&copy; 2026 William Kapke &bull; Data provided by <a href="https://rebrickable.com" target="_blank">Rebrickable</a></footer>
